--- a/index.html
+++ b/index.html
@@ -476,10 +476,9 @@
 
           <div class="col-lg-6">
             <div class="member d-flex align-items-start">
-              <div class="pic"><img src="assets/img/doctors/chandafinal.jpg" class="img-fluid" alt=""></div>
-              <div class="member-info">
+              <div class="pic"><img src="assets/img/doctors/chandafinal.jpg" class="img-fluid" alt=""></div> <div class="member-info">
                 <h4>DR.CHANDA KUNTAL SAHA</h4>
-                 <span>B.H.M.S,M.D,FCPPA,FRCT,DIPGE,LPTTL</span>
+                 <span>B.H.M.S,M.D,FCPPA</span>
                 <p>Explicabo voluptatem mollitia et repellat qui dolorum quasi</p>
                 <div class="social">
                   <a href=""><i class="ri-twitter-fill"></i></a>
