--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta content="healthylifestyle, nature cures world, homoeopathy" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/snake-34904.svg" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
