--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
             <div class="member d-flex align-items-start">
               <div class="pic"><img src="assets/img/doctors/chandafinal.jpg" class="img-fluid" alt=""></div> <div class="member-info">
                 <h4>DR.CHANDA KUNTAL SAHA</h4>
-                 <span>B.H.M.S,M.D,FCPPA</span>
+                 <span>B.H.M.S,M.D,FCPPA,PGDDE,PhD</span>
                 <p>Explicabo voluptatem mollitia et repellat qui dolorum quasi</p>
                 <div class="social">
                   <a href=""><i class="ri-twitter-fill"></i></a>
