--- a/index.html
+++ b/index.html
@@ -917,7 +917,7 @@
           <!-- You can delete the links only if you purchased the pro version. -->
           <!-- Licensing information: https://bootstrapmade.com/license/ -->
           <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/Nature cures world -free-medical-bootstrap-theme/ -->
-          Designed by <a href="https://bootstrapmade.com/">Almighty</a>
+          Designed by <a href="#/">Almighty</a>
         </div>  
       </div>
       <div class="social-links text-center text-md-right pt-3 pt-md-0">
